<resources>
    <string name="app_name">Forex user</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="profile">Profile</string>
    <string name="My_list">my list\n</string>
    <string name="chart">chart\n</string>
    <string name="crypto">cyrpto\n</string>
    <string name="journal">ژورنال</string>
    <string name="resume">رزومه</string>
    <string name="psychology">روان شناسی</string>
    <string name="risk_management">مدیریت خطر</string>

    <string name="statement">statement</string>
    <string name="points">point</string>
    <string name="save">save</string>
    <string name="calendar">calendar</string>
    <string name="type">type</string>
    <string name="number_image"><font size="11">Number</font></string>
    <string name="result">Result</string>
    <string name="description">Description</string>
    <string name="value">Value</string>
    <string name="number_transaction"><font size="40">Number transaction</font></string>
    <string name="mini_chart">mini chart</string>
    <string name="checkYourNetwork">اتصال به شبکه را بررسی کنید</string>
    <string name="phoneNumber">شماره موبایل</string>
    <string name="sendPhoneNumber">ارسال شماره تلفن</string>

    <string name="title1">خوش آمدید</string>
    <string name="title2">معاملات فارکس، ساده‌تر از همیشه!</string>
    <string name="title3">آموزش فارکس، در دسترس شما!</string>
    <string name="title4"> امن و مطمئن معامله کنید!</string>

    <string name="content1">آزادانه معامله کنید ،آزادانه ثروتمند شوید</string>
    <string name="content2">با رابط کاربری آسان، هر کسی می‌تواند در فارکس معامله کند!</string>
    <string name="content3"> با دوره‌های آموزشی جامع، دانش خود را در فارکس ارتقا دهید!</string>
    <string name="content4"> با پلتفرم امن ما، خیالتان از امنیت سرمایه خود راحت باشد!</string>
    <string name="skip">صرفنظر</string>
    <string name="confirmPhoneNumber">تایید شماره تلفن</string>
    <string name="confirim">ثبت</string>
    <string name="refresh">تازه سازی</string>
    <string name="analyes">Analyes</string>
    <string name="name">Name :</string>
    <string name="dark_theme">حالت تاریک</string>
    <string name="light_theme">حالت روشن</string>
    <string name="setting">تنظیمات</string>
    <string name="edit">ویرایش</string>

    <string name="logout">خروج</string>
    <string name="symbol">نماد ها</string>
    <string name="title">Title</string>
    <string name="point">Point</string>
    <string name="details">Details</string>
    <string name="prefix_london">L S E - L O N D O N</string>
    <string name="prefix_zurich">"S I X - Z U R I C H "</string>
    <string name="prefix_frankfurt">"F W B - F R A N K F U R T "</string>
    <string name="prefix_moscow">"M O E X - M O S C O W "</string>
    <string name="prefix_tokyo">"J P X - T O K Y O "</string>
    <string name="prefix_shanghai">"S S E - S H A N G H A I "</string>
    <string name="prefix_johannesburg">"J S E - J O H A N N E S B U R G "</string>
    <string name="prefix_hong_kong">"H K E X - H O N G  K O N G "</string>
    <string name="prefix_singapore">S G X - S I N G A P O R E</string>
    <string name="prefix_newyork">N Y S E - N A S D A Q - N E W  Y O R K</string>
    <string name="prefix_mumbai">S S E - M U M B A I</string>
    <string name="prefix_toronto">T S E - T O R O N T O</string>
    <string name="prefix_sydney">A S X - S Y D N E Y</string>
    <string name="prefix_riyadh">T A D A W U L - R I Y A D H</string>
    <string name="prefix_chicago">N Y S E - C H I C A G O</string>
    <string name="prefix_wellington">N Z X - W E L L I N G T O N</string>
    <string name="prefix_dubai">D F M - D U B A I</string>
    <string name="prefix_sao_paulo">B 3 - B O V E S P A - S A O  P A U L O</string>

    <string name="london">L O N D O N</string>
    <string name="zurich">"Z U R I C H "</string>
    <string name="frankfurt">"F R A N K F U R T "</string>
    <string name="moscow">"M O S C O W "</string>
    <string name="tokyo">"T O K Y O "</string>
    <string name="shanghai">"S H A N G H A I "</string>
    <string name="johannesburg">"J O H A N N E S B U R G "</string>
    <string name="hong_kong">"H O N G  K O N G "</string>
    <string name="singapore">S I N G A P O R E</string>
    <string name="newyork">N E W  Y O R K</string>
    <string name="mumbai">M U M B A I</string>
    <string name="toronto">T O R O N T O</string>
    <string name="sydney">S Y D N E Y</string>
    <string name="riyadh">R I Y A D H</string>
    <string name="chicago">C H I C A G O</string>
    <string name="wellington">W E L L I N G T O N</string>
    <string name="dubai">D U B A I</string>
    <string name="sao_paulo">S A O  P A U L O</string>
    <string name="signals">Signals</string>
    <string name="analysis">Analysis</string>
    <string name="show_more">نمایش همه</string>
    <string name="news">اخبار</string>
    <string name="currency">ارزها</string>
    <string name="price_format">Price: $%1$s</string>



</resources>