<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayDark"
    tools:context=".ui.login.LoginVerifyFragment">

    <!--Back-->
    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="@dimen/_34mdp"
        android:layout_height="@dimen/_34mdp"
        android:layout_margin="@dimen/_16mdp"
        android:background="@drawable/bg_back_button"
        android:padding="@dimen/_10mdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <!--Confirm phone number-->
    <TextView
        android:id="@+id/confirm_phone_number_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_150mdp"
        android:text="@string/confirmPhoneNumber"
        android:textColor="@color/white"
        android:textSize="@dimen/_18font_mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Show phone number-->
    <TextView
        android:id="@+id/showPhoneNumberTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60mdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_14font_mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_phone_number_txt"
        tools:text="0937 *** ****" />

    <!--Pin-->
    <com.goodiebag.pinview.Pinview
        android:id="@+id/pinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/showPhoneNumberTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_40mdp"
        app:inputType="number"
        app:hint="0"
        app:pinLength="4"
        app:pinBackground="@drawable/bg_pinview" />

    <!--Confirm-->
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/_70mdp"
        android:layout_height="wrap_content"
        android:id="@+id/confirmBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/customButtonStyle"
        android:text="@string/confirim"
        android:elevation="@dimen/_3mdp"
        android:layout_marginBottom="@dimen/_200mdp"
        android:textSize="@dimen/_14font_mdp" />
    <!--Refresh button-->
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/_70mdp"
        android:layout_height="wrap_content"
        android:id="@+id/refreshBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/customButtonStyle"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="@dimen/_150mdp"
        android:text="@string/refresh"
        android:textSize="@dimen/_14font_mdp" />

    <!--Gradient view-->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200mdp"
        android:alpha="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_gradinet" />


</androidx.constraintlayout.widget.ConstraintLayout>