<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.analeys.journal.point.AddPointFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--Time-->
            <TextView
                android:id="@+id/dateEdtFrgPoint"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40mdp"
                android:layout_marginStart="@dimen/_16mdp"
                android:layout_marginTop="@dimen/_16mdp"
                android:layout_marginEnd="@dimen/_16mdp"
                android:background="@drawable/bg_point_edt"
                android:gravity="center|start"
                android:padding="@dimen/_12mdp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <!--Title-->
            <EditText
                android:id="@+id/eventEdtFrgPoint"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50mdp"
                android:layout_marginTop="@dimen/_10mdp"
                android:background="@drawable/bg_point_edt"
                android:gravity="top"
                android:hint="@string/title"
                android:padding="@dimen/_10mdp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/dateEdtFrgPoint"
                app:layout_constraintStart_toStartOf="@+id/dateEdtFrgPoint"
                app:layout_constraintTop_toBottomOf="@+id/dateEdtFrgPoint" />
            <!--Description-->
            <EditText

                android:id="@+id/noteEdtFrgPoint"
                android:layout_width="0dp"
                android:layout_height="@dimen/_150mdp"
                android:layout_marginTop="@dimen/_16mdp"
                android:background="@drawable/bg_point_edt"
                android:gravity="top"
                android:hint="@string/description"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/eventEdtFrgPoint"
                app:layout_constraintStart_toStartOf="@+id/eventEdtFrgPoint"
                app:layout_constraintTop_toBottomOf="@+id/eventEdtFrgPoint" />
            <!--save button-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveBtnFrgPoint"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="@dimen/_50mdp"
                android:layout_marginTop="@dimen/_16mdp"
                android:layout_marginBottom="@dimen/_16mdp"
                android:background="@drawable/bg_point_edt"
                android:backgroundTint="@color/crayola"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/noteEdtFrgPoint"
                app:layout_constraintStart_toStartOf="@+id/noteEdtFrgPoint"
                app:layout_constraintTop_toBottomOf="@+id/noteEdtFrgPoint" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>