<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayDark"
    tools:context=".ui.home.HomeFragment">

    <!--Image user-->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_user"
        android:layout_width="@dimen/_30mdp"
        android:layout_height="@dimen/_30mdp"
        android:layout_marginTop="@dimen/_10mdp"
        android:layout_marginEnd="@dimen/_10mdp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_q"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/CircleImage" />
    <!--Name user-->
    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10mdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_14font_mdp"
        app:layout_constraintBottom_toBottomOf="@id/img_user"
        app:layout_constraintEnd_toStartOf="@id/img_user"
        app:layout_constraintTop_toTopOf="@id/img_user"
        tools:text="Hello ali" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_100mdp"
        app:layout_constraintTop_toBottomOf="@id/img_user">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--Clock-->
            <ir.hmb72.forexuser.utils.customview.Clock24Forex
                android:id="@+id/analogClock"
                android:layout_width="@dimen/_250mdp"
                android:layout_height="@dimen/_250mdp"
                android:layout_marginTop="@dimen/_10mdp"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <!--Title news-->
            <TextView
                android:id="@+id/newsTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10mdp"
                android:text="@string/news"
                android:textColor="@color/white"
                android:textSize="@dimen/_14font_mdp"
                app:layout_constraintEnd_toEndOf="@id/listNews"
                app:layout_constraintTop_toBottomOf="@id/analogClock" />
            <!--Show more news -->
            <TextView
                android:id="@+id/showMoreNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5mdp"
                android:text="@string/show_more"
                android:textColor="@color/Cultured"
                android:textSize="@dimen/_9font_mdp"
                app:layout_constraintBottom_toBottomOf="@+id/newsTxt"
                app:layout_constraintStart_toStartOf="@id/listNews"
                app:layout_constraintTop_toTopOf="@+id/newsTxt" />
            <!--List news-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10mdp"
                android:layout_marginTop="@dimen/_8mdp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/newsTxt"
             />
            <!--Loading list-->
            <ProgressBar
                android:id="@+id/listNewsLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/listNews"
                app:layout_constraintEnd_toEndOf="@id/listNews"
                app:layout_constraintStart_toStartOf="@id/listNews"
                app:layout_constraintTop_toTopOf="@id/listNews" />
            <!--Coins Txt-->
            <TextView
                android:id="@+id/coinsTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10mdp"
                android:text="@string/currency"
                android:textColor="@color/white"
                android:textSize="@dimen/_14font_mdp"
                app:layout_constraintEnd_toEndOf="@id/listNews"
                app:layout_constraintTop_toBottomOf="@id/listNews" />
            <!--List coins-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listCoin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10mdp"
                android:layout_marginTop="@dimen/_8mdp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/coinsTxt"
                 />
            <!--Loading list-->
            <ProgressBar
                android:id="@+id/listCoinsLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/listCoin"
                app:layout_constraintEnd_toEndOf="@id/listCoin"
                app:layout_constraintStart_toStartOf="@id/listCoin"
                app:layout_constraintTop_toTopOf="@id/listCoin" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>